--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <script src="player.js"></script>
     <script src="sketch.js"></script>
     <script src="tilemap.js"></script>
-  
+    <script src="wall.js"></script>
 
 </body></html>
