Tilemap made, collision fixed, ghosts added

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 
   </head>
   <body>
+    <script src="drawings.js"></script>
+    <script src="ghost.js"></script>
+    <script src="pellet.js"></script>
     <script src="player.js"></script>
     <script src="sketch.js"></script>
     <script src="tilemap.js"></script>
