Working on A* search

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <body>
     <script src="drawings.js"></script>
     <script src="ghost.js"></script>
+    <script src="node.js"></script>
     <script src="pellet.js"></script>
     <script src="player.js"></script>
     <script src="sketch.js"></script>
